upgrade sklearn version

--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
     <title>Mushroom Classification Prediction</title>
 </head>
 <body>
-    <h2>Enter Mushroom Features (encoded values)</h2>
+    <h2>Enter Mushroom Features</h2>
     <form action="/predict" method="post">
         {% for feature in features %}
         <div>
@@ -20,4 +20,3 @@
     {% endif %}
 </body>
 </html>
-
