--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -9,8 +9,8 @@
     <form action="/predict" method="post">
         {% for feature in features %}
         <div>
-            <label for="{{ feature }}">{{ feature.replace('_', ' ').title() }}:</label>
-            <input type="number" step="any" name="{{ feature }}" required>
+            <label for="{{ feature }}">{{ feature}}:</label>
+            <input type="number" step="any" name="{{ feature }}" required> 
         </div>
         {% endfor %}
         <input type="submit" value="Predict">
@@ -20,3 +20,5 @@
     {% endif %}
 </body>
 </html>
+
+
