--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -5,12 +5,12 @@
     <title>Mushroom Classification Prediction</title>
 </head>
 <body>
-    <h2>Enter Mushroom Features</h2>
+    <h2>Enter Mushroom Features (encoded values)</h2>
     <form action="/predict" method="post">
-        {% for feature in features %}
+        {% for feature, min_value, max_value in features %}
         <div>
-            <label for="{{ feature }}">{{ feature}}:</label>
-            <input type="number" step="any" name="{{ feature }}" required> 
+            <label for="{{ feature }}">{{ feature.replace('_', ' ').title() }}:</label>
+            <input type="number" name="{{ feature }}" min="{{ min_value }}" max="{{ max_value }}" required>
         </div>
         {% endfor %}
         <input type="submit" value="Predict">
@@ -20,5 +20,8 @@
     {% endif %}
 </body>
 </html>
+
+
+
 
 
